Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
Impala 2.13.0
-
ghx-label-5
Description
ThriftServer 'backend' (on port: 52436) exited due to TException: Could not bind: Transport endpoint is not connected
This is similar to IMPALA-5499 but is on CentOS 7:
# lsb_release -a LSB Version: :core-4.1-amd64:core-4.1-noarch:cxx-4.1-amd64:cxx-4.1-noarch:desktop-4.1-amd64:desktop-4.1-noarch:languages-4.1-amd64:languages-4.1-noarch:printing-4.1-amd64:printing-4.1-noarch Distributor ID: CentOS Description: CentOS Linux release 7.4.1708 (Core) Release: 7.4.1708 Codename: Core
It's in the ephemeral port range:
# cat /proc/sys/net/ipv4/ip_local_port_range 32768 60999
Attachments
Attachments
Issue Links
- relates to
-
IMPALA-5499 session-expiry-test failed because of conflicting ephemeral ports
- Resolved
-
THRIFT-1944 Binding to zero port
- Closed